--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
     "react-responsive": "^10.0.0",
+    "swiper": "^11.2.10",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
   },
